Change some things to var.
Also simplify some code using streams.